// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`两端对齐的渲染方式 1`] = `
<div
  className="FormLabelContent-vdsbls-0 geOClY"
  required={true}
>
  标签内容
</div>
`;

exports[`正确渲染FormLabelContent组件 1`] = `
<div
  className="FormLabelContent-vdsbls-0 lkYOQj"
>
  标签内容
</div>
`;

exports[`渲染右对齐的必填状态 1`] = `
<div
  className="FormLabelContent-vdsbls-0 iwHNev"
  required={true}
>
  标签内容
</div>
`;

exports[`渲染垂直布局下的标签内容 1`] = `
<div
  className="FormLabelContent-vdsbls-0 cVtrGJ"
>
  标签内容
</div>
`;
